15-Apr-2017 Fixes #317. Added all missing current C++ standards to C.Cxx.ELanguageStandards enumeration. Added are Cxx03, GnuCxx03, GnuCxx11, Cxx14, GnuCxx14.

07-Apr-2017 ======== Version 1.1.0 ========

07-Apr-2017 Fixes #315. Switch tests on macOS to use Clang-Xcode8 by default.

30-Mar-2017 Fixes #312. Generated Xcode projects now honour 'false' values for ClangCommon.ICommonCompilerSettings.AllWarnings and ExtraWarnings.

25-Mar-2017 ======== Version 1.1.0 beta 3 Release ========

25-Mar-2017 Fixes #281. Improve the error message when mono is not detected.

21-Mar-2017 Fixes #304. MingwCommon.IArchiverSettings and GccCommon.IArchiverSettings have been renamed, for consistency, to MingwCommon.ICommonArchiverSettings and GccCommon.ICommonArchiverSettings. IMPORTANT: If user packages are referencing those old interface names, this is a breaking change, and requires script updates.

21-Mar-2017 Fixes #307. C source container indexing can now accept a path, using forward slashes to separate directories, to pattern match files in the container. Previously, this did not work on Windows, due to the comparison of forward slashes with back slashes. Using forward slashes is the BAM cross-platform convention.

21-Mar-2017 Fixes #226. Added Bam.Core.ISemanticVersion, and extension methods to compare an ISemanticVersion against a specified version (see ISemanticVersion.IsAtLeast). Changed Bam.Core.IProductDefinition to inherit ISemanticVersion since they shared properties - this may require package scripts to be fixed, if IProductDefinition was explicitly implemented. C.CompilerTool now implements ISemanticVersion, and Clang, Gcc, Mingw and VisualC compilers have been updated with major and minor versions. Changed Test8 which was causing a compiler warning starting with VisualC 2015.
